memperbarui file index.pug

--- a/index.pug
+++ b/index.pug
@@ -19,7 +19,7 @@ block content
     +newsItem('Title', 'https://storage.googleapis.com/a1aa/image/Xq7xPY6RqFoDB1vH1eqqM0sQWIZghfAs5cMDOi9ZcYJ2xnrTA.jpg', 'Lorem ipsum dolor amet, consectetur adipiscing elit. Deplibus aute veniam torquent fermentum porttitor.', 'Ayah Azhar', '9 Januari 2018')
 
   .button-container-berita
-    button View More
+    button(onclick="location.href='Berita.html'") View More
 
   // Lokasi Perpusum Section
   +lokasiPerpusum('Lokasi Perpusum', 'https://upload.wikimedia.org/wikipedia/id/f/f0/Peta_Sumenep_Kepulauan.png', 'Jl. Raya Lenteng No 2 Sumenep')
