--- a/komponen/css/style.css
+++ b/komponen/css/style.css
@@ -776,3 +776,117 @@ body-feedback {
   height: 75px;
   margin: 5px;
 }
+
+/* css Feedback Penilaian */
+body-penilaian {
+  font-family: Arial, sans-serif;
+  background-color: #ffffff;
+  margin: 0;
+  padding: 0;
+}
+
+.kontainer-penilaian {
+  width: 80%;
+  margin: 0 auto;
+  text-align: left;
+  margin-bottom: 67px;
+  margin-top: 100px;
+}
+
+.kontainer-penilaian p {
+  color: white;
+  font-weight: bold;
+  margin: 0;
+  font-size: 30px;
+}
+
+.input-container {
+  background-color: #32cd32;
+  padding: 20px;
+  border-radius: 5px;
+  padding-right: 25px;
+  margin-right: -25px;
+  margin-left: -48px;
+}
+
+.input-container input {
+  width: 100%;
+  padding: 8px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  outline: none;
+}
+
+.kontainer-rating {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  background-color: #32cd32;
+  padding: 15px;
+  margin-left: 104px;
+  margin-right: 130px;
+  margin-bottom: 67px;
+  border-radius: 5px;
+}
+
+.lingkaran {
+  width: 75px;
+  height: 75px;
+  border: 2px solid black;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.5s;
+  font-size: 30px;
+}
+
+.lingkaran.aktif {
+  background-color: blue;
+  color: white;
+  transform: scale(1.1);
+}
+
+.button-feedback-penilaian {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 400px;
+  margin: 20px auto;
+}
+
+.button-feedback-penilaian button {
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  gap: 1000px;
+}
+
+.button-feedback-penilaian button.prev {
+  background-color: #32cd32;
+  color: #fff;
+  margin-left: -460px;
+}
+
+.button-feedback-penilaian button.prev:hover {
+  background-color: #228b22;
+}
+
+.button-feedback-penilaian button.next {
+  background-color: #32cd32;
+  color: white;
+  margin-left: 1140px;
+}
+
+.button-feedback-penilaian button.next:hover {
+  background-color: #228b22;
+}
