menambahkan halaman Feedback Saran

--- a/FeedbackPenilaian.pug
+++ b/FeedbackPenilaian.pug
@@ -6,7 +6,8 @@ block content
     +rating("kepuasan", "Kepuasan:")
     +rating("ketepatan", "Ketepatan:")
     .button-feedback-penilaian
-        button.button.prev(onclick="location.href='feedback.html'") Prev
+        button.button.back(onclick="location.href='feedback.html'") Back
         button.button.next(onclick="location.href='Makasih.html'") Next
 
     script(src="script/FeedbackPenilaian.js")
+a
