--- a/komponen/pug/_component.pug
+++ b/komponen/pug/_component.pug
@@ -10,4 +10,5 @@ include _penggolonganusia.pug
 include _pengumuman.pug
 include _biodata.pug
 include _review.pug
-include  _FeedbackPenilaian.pug
+include _FeedbackPenilaian.pug
+include _FeedbackSaran.pug
