--- a/komponen/css/style.css
+++ b/komponen/css/style.css
@@ -959,3 +959,53 @@ body-penilaian {
 .button-saran button.next:hover {
   background-color: #228b22;
 }
+
+/* css Makasih */
+.container-makasih {
+  width: 80%;
+  margin: 0 auto;
+  text-align: left;
+  margin-bottom: 110px;
+  display: flex;
+}
+
+.container-makasih2 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-grow: 1; /* Agar container ini mengambil ruang yang tersisa */
+}
+
+.emoji-makasih {
+  font-size: 360px;
+  margin-right: 280px;
+}
+
+.header2-makasih {
+  font-size:64px;
+  margin-bottom: 0;
+}
+
+.makasih {
+  font-size: 39px;
+  color: #555;
+  margin-right: 175px;
+  margin-bottom: 51px;
+  margin-top: 51px;
+}
+
+.confirm-button {
+  background-color: #32cd32;
+  color: #ffffff;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  float: right;
+  margin-left: 400px;
+}
+
+.confirm-button:hover {
+  background-color: #228b22;
+}
