--- a/perkembangan.pug
+++ b/perkembangan.pug
@@ -1,17 +1,25 @@
 extends komponen/pug/_template.pug
 
 block content
+  -
+    const iconData = [
+      { iconClass: 'fas fa-images' },
+      { iconClass: 'fas fa-images' }
+    ];
+  -
+    const textData = [
+      { title: 'Lorem ipsum', description: 'Lorem ipsum odor amet, consectetuer adipiscing elit. Dapibus arcu vestibulum torquent hendrerit porttitor.' },
+      { title: 'Lorem ipsum', description: 'Lorem ipsum odor amet, consectetuer adipiscing elit. Dapibus arcu vestibulum torquent hendrerit porttitor.' },
+      { title: 'Lorem ipsum', description: 'Lorem ipsum odor amet, consectetuer adipiscing elit. Dapibus arcu vestibulum torquent hendrerit porttitor.' }
+    ];
   .container-perkembangan
     h1.title-perkembangan Perkembangan Perpusum
     .row-perkembangan
-      +iconColumn('fas fa-images')
-      .arrow-perkembangan
-        i(class="fas fa-arrow-right")
-      +iconColumn('fas fa-images')
-      .arrow-perkembangan
-        i(class="fas fa-arrow-right")
+      each icon in iconData
+        +iconColumn(icon.iconClass)
+        .arrow-perkembangan
+          i(class="fas fa-arrow-right")
       +iconColumn('fas fa-images')
     .row-perkembangan
-      +textColumn('Lorem ipsum', 'Lorem ipsum odor amet, consectetuer adipiscing elit. Dapibus arcu vestibulum torquent hendrerit porttitor.')
-      +textColumn('Lorem ipsum', 'Lorem ipsum odor amet, consectetuer adipiscing elit. Dapibus arcu vestibulum torquent hendrerit porttitor.')
-      +textColumn('Lorem ipsum', 'Lorem ipsum odor amet, consectetuer adipiscing elit. Dapibus arcu vestibulum torquent hendrerit porttitor.')
+      each text in textData
+        +textColumn(text.title, text.description)
