--- a/komponen/css/style.css
+++ b/komponen/css/style.css
@@ -523,10 +523,12 @@ body-feedback {
 .radio-group-feedback label {
   font-size: 16px;
   margin-right: 20px;
+  cursor: pointer;
 }
 
 .radio-group-feedback input[type="radio"] {
   margin-right: 5px;
+  cursor: pointer;
 }
 
 .submit-btn-feedback {
