--- a/review.pug
+++ b/review.pug
@@ -1,8 +1,41 @@
 extends komponen/pug/_template.pug
 
 block content
+  -
+    const dataReviewPengguna = [
+      {
+        name: 'Johan Liebert',
+        date: '25/04/2024',
+        description: 'Buku ini sangat informatif',
+        imageUrl: 'https://storage.googleapis.com/a1aa/image/WCbxMWTlAVJVI1ICDecoEJ5NvNJflfVS8F8Gp6LN1xRAXVXnA.jpg',
+        gallery: [
+          'https://storage.googleapis.com/a1aa/image/yVd0Hhe19q0XRqnaY4GfzaMkOzMLrcul4Vvr0H2fB9WFXVXnA.jpg',
+          'https://storage.googleapis.com/a1aa/image/yVd0Hhe19q0XRqnaY4GfzaMkOzMLrcul4Vvr0H2fB9WFXVXnA.jpg'
+        ]
+      },
+      {
+        name: 'Gufron',
+        date: '25/04/2024',
+        description: 'Buku ini misterius sulit dipahami',
+        imageUrl: 'https://storage.googleapis.com/a1aa/image/WCbxMWTlAVJVI1ICDecoEJ5NvNJflfVS8F8Gp6LN1xRAXVXnA.jpg',
+        gallery: [
+          'https://storage.googleapis.com/a1aa/image/yVd0Hhe19q0XRqnaY4GfzaMkOzMLrcul4Vvr0H2fB9WFXVXnA.jpg',
+          'https://storage.googleapis.com/a1aa/image/yVd0Hhe19q0XRqnaY4GfzaMkOzMLrcul4Vvr0H2fB9WFXVXnA.jpg'
+        ]
+      },
+      {
+        name: 'Name',
+        date: 'Date',
+        description: 'Description.......',
+        imageUrl: 'https://storage.googleapis.com/a1aa/image/WCbxMWTlAVJVI1ICDecoEJ5NvNJflfVS8F8Gp6LN1xRAXVXnA.jpg',
+        gallery: [
+          'https://storage.googleapis.com/a1aa/image/yVd0Hhe19q0XRqnaY4GfzaMkOzMLrcul4Vvr0H2fB9WFXVXnA.jpg',
+          'https://storage.googleapis.com/a1aa/image/yVd0Hhe19q0XRqnaY4GfzaMkOzMLrcul4Vvr0H2fB9WFXVXnA.jpg'
+        ]
+      }
+    ];
+    
   h1.header-title Review Pengguna
   .container-review
-    +reviewCard('Johan Liebert', '25/04/2024', 'Buku ini sangat informatif', 'https://storage.googleapis.com/a1aa/image/WCbxMWTlAVJVI1ICDecoEJ5NvNJflfVS8F8Gp6LN1xRAXVXnA.jpg', ['https://storage.googleapis.com/a1aa/image/yVd0Hhe19q0XRqnaY4GfzaMkOzMLrcul4Vvr0H2fB9WFXVXnA.jpg', 'https://storage.googleapis.com/a1aa/image/yVd0Hhe19q0XRqnaY4GfzaMkOzMLrcul4Vvr0H2fB9WFXVXnA.jpg'])
-    +reviewCard('Gufron', '25/04/2024', 'Buku ini misterius sulit dipahami', 'https://storage.googleapis.com/a1aa/image/WCbxMWTlAVJVI1ICDecoEJ5NvNJflfVS8F8Gp6LN1xRAXVXnA.jpg', ['https://storage.googleapis.com/a1aa/image/yVd0Hhe19q0XRqnaY4GfzaMkOzMLrcul4Vvr0H2fB9WFXVXnA.jpg', 'https://storage.googleapis.com/a1aa/image/yVd0Hhe19q0XRqnaY4GfzaMkOzMLrcul4Vvr0H2fB9WFXVXnA.jpg'])
-    +reviewCard('Name', 'Date', 'Description.......', 'https://storage.googleapis.com/a1aa/image/WCbxMWTlAVJVI1ICDecoEJ5NvNJflfVS8F8Gp6LN1xRAXVXnA.jpg', ['https://storage.googleapis.com/a1aa/image/yVd0Hhe19q0XRqnaY4GfzaMkOzMLrcul4Vvr0H2fB9WFXVXnA.jpg', 'https://storage.googleapis.com/a1aa/image/yVd0Hhe19q0XRqnaY4GfzaMkOzMLrcul4Vvr0H2fB9WFXVXnA.jpg'])
+    each reviewPengguna in dataReviewPengguna
+      +reviewCard(reviewPengguna.name, reviewPengguna.date, reviewPengguna.description, reviewPengguna.imageUrl, reviewPengguna.gallery)
