memodifikasi _navbar.pug dan membuat halaman strukturorganisasi

--- a/komponen/pug/_navbar.pug
+++ b/komponen/pug/_navbar.pug
@@ -10,7 +10,7 @@ mixin navbar
           li.dropdown-item
             a(href="visimisi.html") Visi dan Misi
           li.dropdown-item
-            a(href="") Struktur Organisasi
+            a(href="strukturorganisasi.html") Struktur Organisasi
           li.dropdown-item
             a(href="perkembangan.html") Perkembangan
           li.dropdown-item
@@ -23,24 +23,24 @@ mixin navbar
           li.dropdown-item
             a(href="penggolonganusia.html") Penggolongan Usia
           li.dropdown-item
-            a(href="#") Lokasi Perpusum
+            a(href="lokasiperpusum.html") Lokasi Perpusum
           li.dropdown-item
             a(href="biodata.html") Biodata Penerbit
       li.nav-item
         a(href="#") Activity >
         ul.dropdown
           li.dropdown-item
-            a(href="#") Berita
+            a(href="berita.html") Berita
           li.dropdown-item
             a(href="pengumuman.html") Pengumuman
       li.nav-item
         a(href="#") Recommendation >
         ul.dropdown
           li.dropdown-item
-            a(href="#") Direkomendasikan
+            a(href="direkomendasikan.html") Direkomendasikan
           li.dropdown-item
             a(href="review.html") Review Pengguna
       li.nav-item
-        a(href="#") Search
+        a(href="search.html") Search
       li.nav-item
         button.language-btn English
