--- a/komponen/css/style.css
+++ b/komponen/css/style.css
@@ -1021,3 +1021,26 @@ body-penilaian {
 .confirm-button:hover {
   background-color: #228b22;
 }
+
+/* css struktur organisasi */
+.kontainer-Struktur-Organisasi {
+  margin-bottom: 90px;
+  margin-top: 90px;
+}
+
+.header-struktur-organisasi {
+  margin-bottom: 60px;
+}
+
+.konten-Struktur-Organisasi {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.kepalaPerpus { 
+  width: 200px;
+  height: 75px;
+  background-color: #52a940;
+}
