--- a/pengumuman2.pug
+++ b/pengumuman2.pug
@@ -3,7 +3,7 @@ extends komponen/pug/_template.pug
 block content
   -
     const dataPengumuman = [
-      { date: "Tanggal 28-08-2024", message: "Pengumuman Hasil Akhir CPNS 2024" },
+      { date: "Date", message: "Announcement......." },
       { date: "Date", message: "Announcement......." },
       { date: "Date", message: "Announcement......." },
       { date: "Date", message: "Announcement......." }
@@ -14,4 +14,4 @@ block content
     each pengumuman in dataPengumuman
       +announcementComponent(pengumuman.date, pengumuman.message)
     .button-pengumuman
-      button.next-button-announcement(onclick="location.href='pengumuman1.html'") Next
+      button.prev-button-announcement(onclick="location.href='pengumuman1.html'") Prev
