--- a/komponen/css/style.css
+++ b/komponen/css/style.css
@@ -1070,3 +1070,87 @@ body-penilaian {
   height: 75px;
   background-color: #52a940;
 }
+
+/* css Kepala Perpustakaan */
+.container-kepala {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+}
+.profile-picture {
+  width: 180px;
+  height: 180px;
+  background-color: #ddd;
+  border: 2px solid #999;
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 144px;
+  color: #aaa;
+}
+.profile-info {
+  text-align: left;
+}
+.profile-info h1 {
+  font-size: 64px;
+  margin: 0;
+  color: #000;
+}
+.profile-info h2 {
+  font-size: 20px;
+  margin: 5px 0 0 0;
+  font-weight: normal;
+  font-size: 55px;
+}
+.team {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+  border-top: 2px solid black;
+  padding-top: 30px;
+  margin-top: 45px;
+}
+.team-member {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  width: 30%;
+}
+.team-picture {
+  width: 90px;
+  height: 90px;
+  border: 1px solid #ccc;
+  margin-bottom: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 71px;
+}
+.team-member p {
+  margin: 5px 0;
+  font-size: 21px;
+}
+
+.button-back-kepalaPerpus {
+  background-color: #52A940;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  display: block;
+  float: left;
+  margin-top: 25px;
+  margin-left: 60px;
+}
+
+.button-back-kepalaPerpus:hover {
+  background-color: #228b22;
+}
+
+.konten-kepala {
+  margin-bottom: 100px;
+}
