menambahkan halaman direkomendasikan

--- a/komponen/pug/_component.pug
+++ b/komponen/pug/_component.pug
@@ -14,3 +14,4 @@ include _FeedbackPenilaian.pug
 include _FeedbackSaran.pug
 include _Makasih.pug
 include _KepalaPerpus.pug
+include _direkomendasikan.pug
