--- a/komponen/pug/_direkomendasikan.pug
+++ b/komponen/pug/_direkomendasikan.pug
@@ -1,3 +1,4 @@
 mixin buku(gambarBuku)
-  .book-cover(style=`background-image: url(${gambarBuku})`)
-  .title Title
+  .buku
+    .book-cover(style=`background-image: url(${gambarBuku})`)
+    .title-direkomendasikan Title
