--- a/komponen/css/style.css
+++ b/komponen/css/style.css
@@ -1154,3 +1154,70 @@ body-penilaian {
 .konten-kepala {
   margin-bottom: 100px;
 }
+
+.book-cover {
+  width: 150px;
+  height: 220px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 8px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  padding: 10px;
+  color: white;
+  font-size: 14px;
+  position: relative;
+  text-align: center;
+  margin-bottom: 7.5px;
+}
+
+.direkomendasikan2 {
+  display: flex;
+  gap: 70px;
+  justify-content: center;
+}
+
+.buku {
+  display: block;
+  justify-items: center;
+  margin-bottom: 10px;
+}
+
+.direkomendasikan1 {
+  display: flex;
+  gap: 70px;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.direkomendasikan1-1 {
+  height: 584px;
+  width: 222px;
+  background-color: #52A940;
+  border-radius: 5px;
+}
+
+.kontainer-direkomendasikan {
+  margin: 100px 0px;
+}
+
+p.populer {
+  margin-left: 20px;
+  font-size: 18px;
+  margin-bottom: 2px;
+  margin-top: 13px;
+}
+
+h1.header-direkomendasikan {
+  margin-bottom: 50px;
+}
+
+img.direkomendasikan {
+  width: 1368px;
+  height: 584px;
+}
+
+.title-direkomendasikan {
+  text-align: center;
+}
