--- a/komponen/pug/_component.pug
+++ b/komponen/pug/_component.pug
@@ -15,3 +15,4 @@ include _FeedbackSaran.pug
 include _Makasih.pug
 include _KepalaPerpus.pug
 include _direkomendasikan.pug
+include _detailBuku.pug
