--- a/lokasiperpusum.pug
+++ b/lokasiperpusum.pug
@@ -1,4 +1,5 @@
 extends komponen/pug/_template.pug
 
 block content
-  +lokasiPerpusum('Lokasi Perpusum', 'https://upload.wikimedia.org/wikipedia/id/f/f0/Peta_Sumenep_Kepulauan.png', 'Jl. Raya Lenteng No 2 Sumenep')
+  .konten-lokasi
+    +lokasiPerpusum('Lokasi Perpusum', 'https://upload.wikimedia.org/wikipedia/id/f/f0/Peta_Sumenep_Kepulauan.png', 'Jl. Raya Lenteng No 2 Sumenep')
