memperbaiki tombol view more

--- a/index.pug
+++ b/index.pug
@@ -70,7 +70,7 @@ block content
       +newsItem(news.title, news.image, news.description, news.author, news.date)
 
   .button-container-berita
-    button(onclick="location.href='Berita.html'") View More
+    button(onclick="location.href='berita.html'") View More
 
   // Lokasi Perpusum Section
   +lokasiPerpusum('Lokasi Perpusum', 'https://upload.wikimedia.org/wikipedia/id/f/f0/Peta_Sumenep_Kepulauan.png', 'Jl. Raya Lenteng No 2 Sumenep')
