--- a/strukturorganisasi.pug
+++ b/strukturorganisasi.pug
@@ -6,4 +6,4 @@ block content
     .konten-Struktur-Organisasi
       a(href="KepalaPerpus.html")
         .kepalaPerpus
-      img(src="img/StrukturOrganisasi.png")
+      img.struktur(src="img/StrukturOrganisasi.png")
